ingress/yaml/tomcat-deply.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: default
spec:
  selector:
    app: tomcat
    release: canary
  ports:
  - name: http
    targetPort: 8080
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat
  namespace: default
  annotations:	# 说明和controller相对于的是nginx规则
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tomcat.ttxsgoto.com
  #- host: 10.68.2.238
    http:
      paths:
      - path:
        backend:	# 对应后端的地址
          serviceName: tomcat  #对应svc的名称
          servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
      release: canary
  template:
    metadata:
      labels:
        app: tomcat
        release: canary
    spec:
      containers:
      - name: tomcat
        image: tomcat
        ports:
        - name: http
          containerPort: 8080
